Minor spacing fix.

--- a/mod1_assignment/CSS/styles.css
+++ b/mod1_assignment/CSS/styles.css
@@ -76,7 +76,7 @@ div.title{
     width: 25%;
   }
   .col-lg-4 {
-    width: 30.33%;
+    width: 31.33%;
   }
   .col-lg-5 {
     width: 41.66%;
